--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # build output
 dist/
 
+# generated types
+.astro/
+
 # dependencies
 node_modules/
 
@@ -10,10 +13,11 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-
 # environment variables
 .env
 .env.production
 
 # macOS-specific files
 .DS_Store
+
+pnpm-lock.yaml
