--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "ankafolio",
+  "name": "porto",
   "type": "module",
   "version": "0.0.1",
-  "private": true,
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -10,15 +9,20 @@
     "preview": "astro preview",
     "astro": "astro"
   },
+  "license": "MIT",
+  "author": "itzanka",
+  "homepage": "https://github.com/itzanka/porto",
   "dependencies": {
-    "@astrojs/mdx": "^0.13.0",
-    "@astrojs/preact": "^1.2.0",
-    "@astrojs/rss": "^1.2.1",
-    "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^2.1.3",
-    "astro": "^1.7.2",
-    "astro-compress": "^1.1.24",
-    "preact": "^10.6.5",
+    "@astrojs/image": "^0.16.0",
+    "@astrojs/mdx": "^0.18.0",
+    "@astrojs/react": "^2.1.0",
+    "@astrojs/sitemap": "^1.2.0",
+    "@astrojs/tailwind": "^3.1.0",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "astro": "^2.1.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "tailwindcss": "^3.0.24"
   }
 }
