--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^2.1.2",
+    "astro-google-fonts-optimizer": "^0.2.2",
+    "daisyui": "^2.51.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwindcss": "^3.0.24"
