--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@astrojs/react": "^2.1.0",
     "@astrojs/sitemap": "^1.2.0",
     "@astrojs/tailwind": "^3.1.0",
+    "@astrojs/ts-plugin": "^1.0.7",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^2.1.2",
-    "astro-google-fonts-optimizer": "^0.2.2",
     "daisyui": "^2.51.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
