--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "porto",
+  "name": "andka",
   "type": "module",
-  "version": "2.0-Alpha",
+  "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -9,22 +9,16 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-  "license": "MIT",
-  "author": "xirf",
-  "homepage": "https://github.com/xirf/xirf",
   "dependencies": {
-    "@astrojs/image": "^0.16.0",
-    "@astrojs/mdx": "^0.18.0",
-    "@astrojs/react": "^2.1.0",
-    "@astrojs/sitemap": "^1.2.0",
-    "@astrojs/tailwind": "^3.1.0",
-    "@astrojs/ts-plugin": "^1.0.7",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "astro": "^2.1.2",
-    "daisyui": "^2.51.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "tailwindcss": "^3.0.24"
+    "@astrojs/partytown": "^1.2.3",
+    "@astrojs/svelte": "^3.1.0",
+    "@astrojs/ts-plugin": "^1.0.10",
+    "astro": "^2.8.0",
+    "svelte": "^4.0.5"
+  },
+  "devDependencies": {
+    "@unocss/preset-web-fonts": "^0.53.5",
+    "@unocss/reset": "^0.53.5",
+    "unocss": "^0.53.5"
   }
 }
