--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/svelte": "^3.1.0",
     "@astrojs/ts-plugin": "^1.0.10",
+    "animejs": "^3.2.1",
     "astro": "^2.8.0",
     "svelte": "^4.0.5"
   },
