--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/sitemap": "^3.0.3",
     "@astrojs/solid-js": "^3.0.2",
     "@astrojs/vercel": "^6.1.0",
+    "@iconify-json/mynaui": "^1.1.6",
     "@unocss/astro": "^0.58.0",
     "astro": "^4.0.7",
     "solid-js": "^1.8.7",
@@ -23,8 +24,6 @@
     "unocss": "^0.58.0"
   },
   "devDependencies": {
-    "@iconify-json/charm": "^1.1.12",
-    "@iconify-json/clarity": "^1.1.12",
     "@unocss/preset-icons": "^0.58.0",
     "@unocss/reset": "^0.58.0",
     "@unocss/transformer-compile-class": "^0.58.0",
