chore: update license and package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
-  "name": "",
+  "name": "xirf",
   "type": "module",
   "version": "0.0.1",
+  "description": "Xirf's personal website",
+  "author": "Xirf",
+  "license": "MIT",
+  "repository": "https://github.com/xirf/xirf",
+  "homepage": "https://andka.me",
+  "keywords": [
+    "astro",
+    "unocss"
+  ],
+  "private": true,
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
