--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Xirf's personal website",
   "author": "Xirf",
   "license": "MIT",
-  "repository": "https://github.com/xirf/xirf",
+  "repository": "https://github.com/xirf/xirf-portofolio",
   "homepage": "https://andka.me",
   "keywords": [
     "astro",
