--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
-  "name": "andka",
+  "name": "",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/svelte": "^3.1.0",
-    "@astrojs/ts-plugin": "^1.0.10",
-    "animejs": "^3.2.1",
-    "astro": "^2.8.0",
-    "svelte": "^4.0.5"
+    "@astrojs/check": "^0.7.0",
+    "astro": "^4.11.0",
+    "typescript": "^5.5.2"
   },
   "devDependencies": {
-    "@iconify-json/charm": "^1.1.9",
-    "@iconify-json/logos": "^1.1.34",
-    "@unocss/preset-icons": "^0.55.1",
-    "@unocss/preset-web-fonts": "^0.53.5",
-    "@unocss/reset": "^0.53.5",
-    "@unocss/transformer-compile-class": "^0.53.5",
-    "@unocss/transformer-variant-group": "^0.55.1",
-    "unocss": "^0.53.5"
+    "@unocss/preset-uno": "^0.61.0",
+    "@unocss/reset": "^0.61.0",
+    "unocss": "^0.61.0"
   }
 }
