--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.6",
     "@iconify-json/mynaui": "^1.1.7",
+    "@iconify-json/solar": "^1.1.9",
     "@typescript-eslint/parser": "^7.13.1",
     "astro": "^4.11.0",
     "eslint": "^9.5.0",
