--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^3.1.1",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.6",
+    "@astrojs/vercel": "^7.7.1",
     "@iconify-json/mynaui": "^1.1.7",
     "@iconify-json/solar": "^1.1.9",
     "@typescript-eslint/parser": "^7.13.1",
