--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "eslint": "latest",
     "eslint-plugin-astro": "^1.2.2",
     "eslint-plugin-jsx-a11y": "^6.9.0",
+    "hastscript": "^9.0.0",
+    "shiki": "^1.10.0",
     "typescript": "^5.5.2",
     "unocss": "^0.61.0"
   },
   "devDependencies": {
+    "@shikijs/transformers": "^1.10.0",
     "@unocss/reset": "^0.61.0"
   }
 }
