--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "lint": "eslint src"
+    "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.7.0",
-    "@astrojs/mdx": "^3.1.1",
-    "@astrojs/rss": "^4.0.6",
+    "@astrojs/check": "0.9.1",
+    "@astrojs/mdx": "3.1.3",
+    "@astrojs/rss": "4.0.7",
     "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/vercel": "^7.7.1",
+    "@astrojs/vercel": "7.7.2",
     "@expressive-code/plugin-collapsible-sections": "^0.35.3",
     "@expressive-code/plugin-line-numbers": "^0.35.3",
     "@iconify-json/mynaui": "^1.1.7",
     "@iconify-json/solar": "^1.1.9",
+    "@rollup/plugin-yaml": "^4.1.2",
     "@typescript-eslint/parser": "^7.13.1",
-    "astro": "^4.11.0",
+    "astro": "4.13.0",
     "astro-expressive-code": "^0.35.3",
     "eslint": "latest",
     "eslint-plugin-astro": "^1.2.2",
@@ -30,6 +30,11 @@
     "unocss": "^0.61.0"
   },
   "devDependencies": {
-    "@unocss/reset": "^0.61.0"
+    "@unocss/reset": "^0.61.0",
+    "@types/bun": "latest"
+  },
+  "module": "index.ts",
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   }
 }
