--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@iconify-json/solar": "^1.1.9",
     "@rollup/plugin-yaml": "^4.1.2",
     "@typescript-eslint/parser": "^7.13.1",
+    "@vercel/analytics": "^1.3.1",
     "astro": "4.13.0",
     "astro-expressive-code": "^0.35.3",
     "eslint": "latest",
