update to latest astro

--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "0.9.3",
-    "@astrojs/mdx": "3.1.4",
-    "@astrojs/rss": "4.0.7",
-    "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/vercel": "7.8.0",
+    "@astrojs/check": "0.9.4",
+    "@astrojs/mdx": "3.1.9",
+    "@astrojs/rss": "4.0.9",
+    "@astrojs/sitemap": "3.2.1",
+    "@astrojs/vercel": "7.8.2",
     "@expressive-code/plugin-collapsible-sections": "^0.35.3",
     "@expressive-code/plugin-line-numbers": "^0.35.3",
     "@iconify-json/mynaui": "^1.1.7",
     "@iconify-json/solar": "^1.1.9",
     "@rollup/plugin-yaml": "^4.1.2",
     "@typescript-eslint/parser": "^7.13.1",
-    "astro": "4.14.0",
+    "astro": "4.16.12",
     "astro-expressive-code": "^0.35.3",
     "eslint": "latest",
     "eslint-plugin-astro": "^1.2.2",
