--- a/package.json
+++ b/package.json
@@ -11,21 +11,23 @@
   },
   "dependencies": {
     "@astrojs/check": "0.9.4",
-    "@astrojs/mdx": "3.1.9",
-    "@astrojs/rss": "4.0.9",
-    "@astrojs/sitemap": "3.2.1",
-    "@astrojs/vercel": "7.8.2",
+    "@astrojs/mdx": "4.2.2",
+    "@astrojs/rss": "4.0.11",
+    "@astrojs/sitemap": "3.3.0",
+    "@astrojs/vercel": "8.1.3",
     "@expressive-code/plugin-collapsible-sections": "^0.35.3",
     "@expressive-code/plugin-line-numbers": "^0.35.3",
     "@iconify-json/mynaui": "^1.1.7",
     "@iconify-json/solar": "^1.1.9",
     "@rollup/plugin-yaml": "^4.1.2",
+    "@shikijs/rehype": "^3.2.1",
     "@typescript-eslint/parser": "^7.13.1",
-    "astro": "4.16.12",
+    "astro": "5.5.5",
     "astro-expressive-code": "^0.35.3",
     "eslint": "latest",
     "eslint-plugin-astro": "^1.2.2",
     "eslint-plugin-jsx-a11y": "^6.9.0",
+    "notion-astro-loader": "^0.4.0",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-external-links": "^3.0.0",
     "rehype-katex": "^7.0.1",
