--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@astrojs/mdx": "4.2.2",
     "@astrojs/rss": "4.0.11",
     "@astrojs/sitemap": "3.3.0",
-    "@astrojs/vercel": "8.1.3",
+    "@astrojs/vercel": "^8.1.3",
     "@expressive-code/plugin-collapsible-sections": "^0.35.3",
     "@expressive-code/plugin-line-numbers": "^0.35.3",
     "@iconify-json/mynaui": "^1.1.7",
@@ -30,8 +30,6 @@
     "notion-astro-loader": "^0.4.0",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-external-links": "^3.0.0",
-    "rehype-katex": "^7.0.1",
-    "remark-math": "^6.0.0",
     "typescript": "^5.5.2",
     "unocss": "^0.61.0"
   },
