--- a/package.json
+++ b/package.json
@@ -10,26 +10,28 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "0.9.4",
-    "@astrojs/mdx": "4.2.2",
-    "@astrojs/rss": "4.0.11",
-    "@astrojs/sitemap": "3.3.0",
-    "@astrojs/vercel": "^8.1.3",
+    "@astrojs/check": "0.9.6",
+    "@astrojs/markdown-remark": "^6.3.10",
+    "@astrojs/mdx": "4.3.13",
+    "@astrojs/rss": "4.0.14",
+    "@astrojs/sitemap": "3.6.0",
+    "@astrojs/vercel": "9.0.2",
     "@expressive-code/plugin-collapsible-sections": "^0.35.3",
     "@expressive-code/plugin-line-numbers": "^0.35.3",
     "@iconify-json/mynaui": "^1.1.7",
     "@iconify-json/solar": "^1.1.9",
     "@rollup/plugin-yaml": "^4.1.2",
-    "@shikijs/rehype": "^3.2.1",
     "@typescript-eslint/parser": "^7.13.1",
-    "astro": "5.5.5",
+    "astro": "5.16.6",
     "astro-expressive-code": "^0.35.3",
     "eslint": "latest",
     "eslint-plugin-astro": "^1.2.2",
     "eslint-plugin-jsx-a11y": "^6.9.0",
-    "notion-astro-loader": "^0.4.0",
+    "mermaid": "^11.12.2",
     "rehype-accessible-emojis": "^0.3.2",
-    "rehype-external-links": "^3.0.0",
+    "rehype-mathjax": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-math": "^6.0.0",
     "typescript": "^5.5.2",
     "unocss": "^0.61.0"
   },
