--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "mermaid": "^11.12.2",
     "rehype-accessible-emojis": "^0.3.2",
+    "rehype-external-links": "^3.0.0",
     "rehype-mathjax": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-math": "^6.0.0",
